todo-app/java/quarkus-api/src/main/deployments/ocp.native/02.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: quarkusnative-todo
    version: v2.2
    app.openshift.io/runtime: quarkus
  name: quarkus-native
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quarkusnative-todo
      version: v2.2
  strategy: {}
  template:
    metadata:
      labels:
        app: quarkusnative-todo
        version: v1
    spec:
      containers:
      - image: quay.io/naveenkendyala/quarkus-demo-quarkusnative-todo:v2.2
        name: quarkusnative-todo
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        resources:
          requests:
            memory: "175Mi"
            cpu: "500m"
          limits:
            memory: "350Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
              port: 8080
              path: /health/live
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 2
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
status: {}
