todo-app/java/quarkus-api/src/main/deployments/ocp.native/04.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    name: quarkus-native-todo-route
  name: quarkus-native-todo-route
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: quarkus-native-todo-svc
    weight: 100
  wildcardPolicy: None
